# healthy-life-api

./: pyproject.toml
healthy_life_api/: manage.py
healthy_life_api/blog/: filters.py  models.py  serializers.py  signals.py  urls_v1.py  views.py
healthy_life_api/blog/migrations/: 0001_initial.py  0002_initial.py
healthy_life_api/common/: models.py  permissions.py  utils.py  validators.py
healthy_life_api/common/management/commands/: filltestDB.py  runtestserver.py
healthy_life_api/healthy_life_api/: asgi.py  settings.py  urls.py  wsgi.py
healthy_life_api/pharmacy/: .views.py.swp  filters.py  models.py  serializers.py  signals.py  urls_v1.py  views.py
healthy_life_api/pharmacy/migrations/: 0001_initial.py  0002_initial.py  0003_alter_loyaltycard_user_card.py
healthy_life_api/user/: models.py  serializers.py  signals.py  urls.py  urls_v1.py  validators.py  views.py
healthy_life_api/user/migrations/: 0001_initial.py  0002_remove_notifications_it_new_notifications_viewed.py  0003_alter_notifications_message_and_more.py  0004_remove_user_is_online_remove_user_last_seen_and_more.py  0005_alter_settings_user_settings.py  0006_settings_messages_from_friends_only_and_more.py  0007_bancommunication_active_alter_awards_description_and_more.py
